01 - OpenCRVS Documentation/v1.3/product-specifications/core-functions/1.-notify-event.md
---
title: "1. Notify event"
source_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/1.-notify-event"
markdown_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/1.-notify-event.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:2c4365b09b2fff09a2c2a3856002cfb5605926338bf5eb165de2d96d606f17ad"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/1.-notify-event.md).

# 1. Notify event

User or external system sends a vital event notification to an assigned office. The notification appears in the {In Progress} workqueue for follow-up and completion.

A vital event notification involves the capture of a minimal set of data related to the occurrence of a vital event and transmission of this to the civil registration authority. In OpenCRVS a notification can be sent by a Field Agent by submitting a partially complete declaration, or it can be submitted from a digital health system e.g. DHIS2, both of which can then found in the {In Progress} workqueue for follow-up and action.

### **Configuration**

* Add Health System integration

### **Pre-condition**

* A Field Agent is completing a declaration
* A Health System integration is configured to send event notifications

### **Triggers**

* A Field Agent can not complete the form with all mandatory information
* A health system sends a birth notification

### **Flow (Field Agent)**

1. Field Agent opens an incomplete declaration
2. User clicks “Send incomplete”
3. Incomplete declaration is sent to the Outbox for processing
4. Once processed the declaration will show in the In Progress workqueue under the tab “Field Agents” for all Registration Agents and Registrars in the registration office

### **Flow (Health System)**

1. Health system user enters birth details
2. Health system sends notification to assigned office
3. Notification will show in the In Progress workqueue under the tab “Health System” for all Registration Agents and Registrars in the registration office

### **Post conditions**

* Record can then be assigned by a Registration Agent or Registrar for them to complete
* Informant receives sms notification with tracking ID if “Sent for incomplete” by Field Agent

{% embed url="<https://www.loom.com/share/ef62e7152c39424e84c4d44a9355a045?sid=b29c56af-8e95-4e84-bfe9-2b6ffadd0b21>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/1.-notify-event.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
