01 - OpenCRVS Documentation/v1.7/product-specifications/core-functions/1.-notify-event.md
---
title: "1. Notify event"
source_url: "https://documentation.opencrvs.org/v1.7/product-specifications/core-functions/1.-notify-event"
markdown_url: "https://documentation.opencrvs.org/v1.7/product-specifications/core-functions/1.-notify-event.md"
version: "v1.7"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:47d09bce4cf2fd3414fac214e98e249915df6f7d74cbb285495178565d683bda"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.7/product-specifications/core-functions/1.-notify-event.md).

# 1. Notify event

User or external system sends a vital event notification to an assigned office. The notification appears in the {In Progress} workqueue for follow-up and completion.

A vital event notification involves the capture of a minimal set of data related to the occurrence of a vital event and transmission of this to the civil registration authority. In OpenCRVS a notification can be sent by a Field Agent by submitting a partially complete declaration, or it can be submitted from a digital health system e.g. DHIS2, both of which can then found in the {In Progress} workqueue for follow-up and action.

### **Configuration**

* Add Health System integration

### **Pre-condition**

* \-

### **Triggers**

* A user with `scope:declaraiton-send-incomplete` is completing a declaration and has not completed all mandatory questions
* A health system sends a birth notification

### **Flow (Field Agent)**

1. User starts or opens an incomplete declaration
2. User clicks “Send incomplete”
3. Incomplete declaration is sent to the Outbox for processing
4. Once processed the declaration will show in the In Progress workqueue under the tab “Field Agents” for user with `scope:declaraiton-send-for-review`, `scope:declaraiton-send-for-approval`, `scope:declaraiton-register`

### **Flow (Health System)**

1. Health system user enters birth details
2. Health system sends notification to assigned office
3. Notification will show in the In Progress workqueue under the tab “Health System” for user with `scope:declaraiton-send-for-review`, `scope:declaraiton-send-for-approval`, `scope:declaraiton-register`

### **Post conditions**

* Informant receives sms notification with tracking ID if “Sent for incomplete”

{% embed url="<https://youtu.be/Jbjmk3vJxZk>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.7/product-specifications/core-functions/1.-notify-event.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
